# stark-anatomy

./: .gitignore  README.md  _config.yml  pyproject.toml
code/: .gitignore  algebra.py  fast_rpsss.py  fast_stark.py  fri.py  ip.py  merkle.py  multivariate.py  ntt.py  rescue_prime.py  rpsss.py  stark.py  test_fast_stark.py  test_fri.py  test_ip.py  test_merkle.py  test_multivariate.py  test_ntt.py  test_rescue_prime.py  test_rpsss.py  test_stark.py  test_univariate.py  univariate.py
docs/: .gitignore  Gemfile  _config.yml  basic-tools.md  faster.md  fri.md  index.md  introduction.md  overview.md  rescue-prime.md  stark.md
docs/_includes/: footer.html  head-custom.html  head.html
docs/_posts/: 2021-10-20-welcome-to-jekyll.markdown
docs/_site/: 404.html  basic-tools.html  faster.html  feed.xml  fri.html  index.html  introduction.html  introduction.md  overview.html  rescue-prime.html  stark.html
docs/_site/about/: index.html
docs/_site/jekyll/update/2021/10/20/: welcome-to-jekyll.html
docs/_site/latex/: graphics.tex
docs/latex/: graphics.tex
tutorial/: basic-tools.md  faster.md  fri.md  introduction.md  overview.md  rescue-prime.md  stark.md
tutorial/latex/: .gitignore  graphics.tex
